# crittr

./: LICENSE  README.md  main.py  notes.txt  pyproject.toml  todo.txt
crittr/: __init__.py  creatures.py  environment_space.py  physics.py
crittr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
crittr/algorithms/continuous_ppo/: intelligence.py  networks.py
crittr/engine/: creatures.py  environment_space.py  intelligence.py  networks.py  physics.py  policies.py
crittr/examples/: __init__.py  demo.py
examples/: demo.py
notes/: notes.txt  todo.txt
